# libsys4

./: CMakeLists.txt  meson.build
include/system4/: bmp.h  cg.h  file.h
src/: ajp.c  bmp.c  cg.c  file.c  fnl.c  system.c
